# srrg2_qgl_viewport

./: .gitignore  README.md
srrg2_qgl_viewport/: CMakeLists.txt  README.md  package.xml
srrg2_qgl_viewport/src/: CMakeLists.txt
srrg2_qgl_viewport/src/srrg_qgl_viewport/: CMakeLists.txt  gl_helpers.cpp  gl_helpers.h  qgl_packet_processor.cpp  qgl_packet_processor.h  qgl_viewport.cpp  qgl_viewport.h  viewer_core_base_qgl.cpp  viewer_core_base_qgl.h  viewer_core_shared_qgl.cpp  viewer_core_shared_qgl.h
srrg2_qgl_viewport/src/tests/: CMakeLists.txt  qt_image_viewport.cpp  qt_image_viewport.h  test_cv_gl_interaction.cpp  test_image_rendering.cpp  test_multicanvas.cpp  test_opencv_shared.cpp  test_viewer_core_multicanvas.cpp  test_viewer_manager_shared.cpp  test_viewport.cpp
srrg2_qgl_viewport_ros/: CMakeLists.txt  README.md  package.xml
srrg2_qgl_viewport_ros/src/: CMakeLists.txt
srrg2_qgl_viewport_ros/src/app/: CMakeLists.txt  srrg_viewer_ros_client.cpp
srrg2_qgl_viewport_ros/src/srrg_qgl_viewport_ros/: CMakeLists.txt  viewer_core_ros_qgl.cpp  viewer_core_ros_qgl.h
srrg2_qgl_viewport_ros/src/tests/: CMakeLists.txt  test_viewer_core_client.cpp  test_viewer_core_server.cpp  test_viewer_core_server_multicanvas.cpp  test_viewer_manager_client.cpp  test_viewer_manager_server.cpp
