<?xml version="1.0"?>
<package format="2">
  <name>srrg2_qgl_viewport</name>
  <version>1.0.0</version>
  <description>Viewport for our viewer based on opengl</description>

  <maintainer email="grisetti@diag.uniroma1.it">Giorgio Grisetti</maintainer>
  <maintainer email="ialoise@diag.uniroma1.it">Irvin Aloise</maintainer>
  <license>BSD-4</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>srrg_cmake_modules</depend>
  <depend>srrg2_core</depend>
  
</package>
